--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0"
+fastapi = { version = "^0", extras = ["standard"] }
 pydantic = "^2"
-diskcache = "^5.6.3"
+diskcache = "*"
 
 [tool.poetry.extras]
 all = []
