--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -14,18 +14,29 @@ crashtest==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
 cryptography==43.0.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 diskcache==5.6.3 ; python_version >= "3.12" and python_version < "4.0"
 distlib==0.3.9 ; python_version >= "3.12" and python_version < "4.0"
+dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 dulwich==0.21.7 ; python_version >= "3.12" and python_version < "4.0"
+email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
-fastapi==0.115.2 ; python_version >= "3.12" and python_version < "4.0"
+fastapi-cli[standard]==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
+fastapi[standard]==0.115.2 ; python_version >= "3.12" and python_version < "4.0"
 fastjsonschema==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
 filelock==3.16.1 ; python_version >= "3.12" and python_version < "4.0"
+h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
+httpcore==1.0.6 ; python_version >= "3.12" and python_version < "4.0"
+httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
+httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 installer==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 isort==5.13.2 ; python_version >= "3.12" and python_version < "4.0"
 jaraco-classes==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 jeepney==0.8.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
+jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
 keyring==24.3.1 ; python_version >= "3.12" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
+markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 more-itertools==10.5.0 ; python_version >= "3.12" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -42,15 +53,20 @@ ptyprocess==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
 pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.9.2 ; python_version >= "3.12" and python_version < "4.0"
+pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
 pyproject-hooks==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-asyncio==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-cov==4.1.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-xdist==3.6.1 ; python_version >= "3.12" and python_version < "4.0"
 pytest==8.3.3 ; python_version >= "3.12" and python_version < "4.0"
+python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
+python-multipart==0.0.12 ; python_version >= "3.12" and python_version < "4.0"
 pywin32-ctypes==0.2.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
+pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
 rapidfuzz==3.10.0 ; python_version >= "3.12" and python_version < "4.0"
 requests-toolbelt==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
+rich==13.9.2 ; python_version >= "3.12" and python_version < "4.0"
 secretstorage==3.3.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 setuptools==75.2.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -58,7 +74,12 @@ sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.40.0 ; python_version >= "3.12" and python_version < "4.0"
 tomlkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 trove-classifiers==2024.10.16 ; python_version >= "3.12" and python_version < "4.0"
+typer==0.12.5 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
+uvicorn[standard]==0.32.0 ; python_version >= "3.12" and python_version < "4.0"
+uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
 virtualenv==20.27.0 ; python_version >= "3.12" and python_version < "4.0"
+watchfiles==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
+websockets==13.1 ; python_version >= "3.12" and python_version < "4.0"
 xattr==1.1.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "darwin"
