--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 fastapi = { version = "^0", extras = ["standard"] }
 pydantic = "^2"
 diskcache = "*"
+pydantic-settings = "*"
 
 [tool.poetry.extras]
 all = []
