--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -52,6 +52,7 @@ poetry==1.8.4 ; python_version >= "3.12" and python_version < "4.0"
 ptyprocess==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
 pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
+pydantic-settings==2.6.0 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.9.2 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
 pyproject-hooks==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
