--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -9,12 +9,13 @@ charset-normalizer==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 cleo==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows" or os_name == "nt")
-coverage[toml]==7.6.3 ; python_version >= "3.12" and python_version < "4.0"
+coverage[toml]==7.6.4 ; python_version >= "3.12" and python_version < "4.0"
 crashtest==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
 cryptography==43.0.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 diskcache==5.6.3 ; python_version >= "3.12" and python_version < "4.0"
 distlib==0.3.9 ; python_version >= "3.12" and python_version < "4.0"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
+duckdb==1.1.2 ; python_version >= "3.12" and python_version < "4.0"
 dulwich==0.21.7 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
