Add OpenAI API support and update dependencies
- Added new environment variable `OPENAI_API_KEY` in `.env.hints`.
- Introduced new packages:
  - `distro` (1.9.0)
  - `jiter` (0.6.1)
  - `openai` (1.52.0)
- Updated dependencies in `pyproject.toml`, `requirements-all.txt`, and `requirements.txt` to include:
  - `tqdm` (4.66.5)
  - Other necessary updates to existing dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 diskcache = "*"
 duckdb = ">=0.10.2"
 fastapi = { version = "^0", extras = ["standard"] }
+openai = "^1"
 pydantic = "^2"
 pydantic-settings = "*"
 python = "^3.12"
