--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -14,6 +14,7 @@ crashtest==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
 cryptography==43.0.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 diskcache==5.6.3 ; python_version >= "3.12" and python_version < "4.0"
 distlib==0.3.9 ; python_version >= "3.12" and python_version < "4.0"
+distro==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 duckdb==1.1.2 ; python_version >= "3.12" and python_version < "4.0"
 dulwich==0.21.7 ; python_version >= "3.12" and python_version < "4.0"
@@ -34,6 +35,7 @@ isort==5.13.2 ; python_version >= "3.12" and python_version < "4.0"
 jaraco-classes==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 jeepney==0.8.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
+jiter==0.6.1 ; python_version >= "3.12" and python_version < "4.0"
 keyring==24.3.1 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
@@ -41,6 +43,7 @@ mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 more-itertools==10.5.0 ; python_version >= "3.12" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
+openai==1.52.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 pexpect==4.9.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -75,6 +78,7 @@ shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.40.0 ; python_version >= "3.12" and python_version < "4.0"
 tomlkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
+tqdm==4.66.5 ; python_version >= "3.12" and python_version < "4.0"
 trove-classifiers==2024.10.16 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.12.5 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
