--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
 diskcache==5.6.3 ; python_version >= "3.12" and python_version < "4.0"
+distro==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 duckdb==1.1.2 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -15,9 +16,11 @@ httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
 httpx==0.27.2 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
+jiter==0.6.1 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
+openai==1.52.0 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-settings==2.6.0 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.9.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -29,6 +32,7 @@ rich==13.9.2 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.40.0 ; python_version >= "3.12" and python_version < "4.0"
+tqdm==4.66.5 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.12.5 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn[standard]==0.32.0 ; python_version >= "3.12" and python_version < "4.0"
