--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -43,6 +43,7 @@ mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 more-itertools==10.5.0 ; python_version >= "3.12" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
+numpy==2.1.2 ; python_version >= "3.12" and python_version < "4.0"
 openai==1.52.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
