--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ jiter==0.6.1 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
+numpy==2.1.2 ; python_version >= "3.12" and python_version < "4.0"
 openai==1.52.0 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.23.4 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-settings==2.6.0 ; python_version >= "3.12" and python_version < "4.0"
