--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -20,8 +20,9 @@ duckdb==1.1.2 ; python_version >= "3.12" and python_version < "4.0"
 dulwich==0.21.7 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
+faker==30.8.1 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli[standard]==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
-fastapi[standard]==0.115.2 ; python_version >= "3.12" and python_version < "4.0"
+fastapi[standard]==0.115.3 ; python_version >= "3.12" and python_version < "4.0"
 fastjsonschema==2.20.0 ; python_version >= "3.12" and python_version < "4.0"
 filelock==3.16.1 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -44,7 +45,7 @@ more-itertools==10.5.0 ; python_version >= "3.12" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 numpy==2.1.2 ; python_version >= "3.12" and python_version < "4.0"
-openai==1.52.0 ; python_version >= "3.12" and python_version < "4.0"
+openai==1.52.2 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.1 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 pexpect==4.9.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -65,22 +66,24 @@ pytest-asyncio==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-cov==4.1.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-xdist==3.6.1 ; python_version >= "3.12" and python_version < "4.0"
 pytest==8.3.3 ; python_version >= "3.12" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 python-multipart==0.0.12 ; python_version >= "3.12" and python_version < "4.0"
 pywin32-ctypes==0.2.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
-rapidfuzz==3.10.0 ; python_version >= "3.12" and python_version < "4.0"
+rapidfuzz==3.10.1 ; python_version >= "3.12" and python_version < "4.0"
 requests-toolbelt==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
-rich==13.9.2 ; python_version >= "3.12" and python_version < "4.0"
+rich==13.9.3 ; python_version >= "3.12" and python_version < "4.0"
 secretstorage==3.3.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 setuptools==75.2.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
-starlette==0.40.0 ; python_version >= "3.12" and python_version < "4.0"
+starlette==0.41.0 ; python_version >= "3.12" and python_version < "4.0"
 tomlkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 tqdm==4.66.5 ; python_version >= "3.12" and python_version < "4.0"
-trove-classifiers==2024.10.16 ; python_version >= "3.12" and python_version < "4.0"
+trove-classifiers==2024.10.21.16 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.12.5 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
