Refactor project structure and update documentation
- Renamed main application file from `duckdb_vss_api.py` to `dvs/app.py`.
- Updated Makefile commands to run the server using the new application file.
- Revised README.md to reflect the new project name "DVS" and updated repository URL.
- Introduced versioning with a new `version.py` file.
- Updated project name in `pyproject.toml` from "duckdb-vss-api" to "dvs".

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 authors = ["Allen Chou <f1470891079@gmail.com>"]
 description = "Deploy simple vector similarity search service by duckdb."
 license = "MIT"
-name = "duckdb-vss-api"
+name = "dvs"
 readme = "README.md"
 version = "0.1.0"
 
