Update project metadata in `pyproject.toml`
- Changed project name from `dvs` to `dvs-py` for better clarity.
- Added `packages` entry to include the `dvs` module, enhancing package management.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 authors = ["Allen Chou <f1470891079@gmail.com>"]
 description = "Deploy simple vector similarity search service by duckdb."
 license = "MIT"
-name = "dvs"
+name = "dvs-py"
+packages = [{ include = "dvs" }]
 readme = "README.md"
 version = "0.1.0"
 
