--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -9,7 +9,7 @@ charset-normalizer==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 cleo==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows" or os_name == "nt")
-coverage[toml]==7.6.7 ; python_version >= "3.12" and python_version < "4.0"
+coverage[toml]==7.6.8 ; python_version >= "3.12" and python_version < "4.0"
 crashtest==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
 cryptography==43.0.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 diskcache==5.6.3 ; python_version >= "3.12" and python_version < "4.0"
@@ -82,14 +82,15 @@ six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
 tomlkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
-tqdm==4.67.0 ; python_version >= "3.12" and python_version < "4.0"
+tqdm==4.67.1 ; python_version >= "3.12" and python_version < "4.0"
 trove-classifiers==2024.10.21.16 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.13.1 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
+uuid-utils==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn[standard]==0.32.1 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
 virtualenv==20.27.1 ; python_version >= "3.12" and python_version < "4.0"
-watchfiles==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
+watchfiles==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 websockets==14.1 ; python_version >= "3.12" and python_version < "4.0"
 xattr==1.1.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "darwin"
