--- a/requirements.txt
+++ b/requirements.txt
@@ -33,10 +33,11 @@ rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
-tqdm==4.67.0 ; python_version >= "3.12" and python_version < "4.0"
+tqdm==4.67.1 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.13.1 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
+uuid-utils==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn[standard]==0.32.1 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
-watchfiles==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
+watchfiles==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 websockets==14.1 ; python_version >= "3.12" and python_version < "4.0"
