Enhance vector search debugging and update dependencies
- Added a `debug` parameter to the `vector_search` function in `vss.py` to allow for optional SQL query logging.
- Updated `poetry.lock`, `requirements-all.txt`, and `pyproject.toml` to include new dependencies: `asttokens`, `contourpy`, `cycler`, `decorator`, and `executing`.
- These changes improve debugging capabilities and expand the project's functionality, ensuring better maintainability and performance.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,11 @@ mkdocs-render-swagger-plugin = "*"
 neoteroi-mkdocs = "*"
 
 [tool.poetry.group.dev.dependencies]
-black = "*"
+black = { extras = ["jupyter"], version = "*" }
 faker = "*"
 isort = "*"
+matplotlib = "*"
+pandas = "*"
 poetry-plugin-export = "^1.6.0"
 pytest = "^8"
 pytest-asyncio = "*"
