--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
 anyio==4.6.2.post1 ; python_version >= "3.12" and python_version < "4.0"
-black==24.10.0 ; python_version >= "3.12" and python_version < "4.0"
+asttokens==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
+black[jupyter]==24.10.0 ; python_version >= "3.12" and python_version < "4.0"
 build==1.2.2.post1 ; python_version >= "3.12" and python_version < "4.0"
 cachecontrol[filecache]==0.14.1 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
@@ -9,9 +10,12 @@ charset-normalizer==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
 cleo==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows" or os_name == "nt")
+contourpy==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 coverage[toml]==7.6.8 ; python_version >= "3.12" and python_version < "4.0"
 crashtest==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
 cryptography==44.0.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
+cycler==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
+decorator==5.1.1 ; python_version >= "3.12" and python_version < "4.0"
 diskcache==5.6.3 ; python_version >= "3.12" and python_version < "4.0"
 distlib==0.3.9 ; python_version >= "3.12" and python_version < "4.0"
 distro==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -20,11 +24,13 @@ duckdb==1.1.3 ; python_version >= "3.12" and python_version < "4.0"
 dulwich==0.21.7 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
+executing==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 faker==33.1.0 ; python_version >= "3.12" and python_version < "4.0"
 fastapi-cli[standard]==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
 fastapi[standard]==0.115.6 ; python_version >= "3.12" and python_version < "4.0"
 fastjsonschema==2.21.1 ; python_version >= "3.12" and python_version < "4.0"
 filelock==3.16.1 ; python_version >= "3.12" and python_version < "4.0"
+fonttools==4.55.1 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
 httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -32,14 +38,19 @@ httpx==0.28.0 ; python_version >= "3.12" and python_version < "4.0"
 idna==3.10 ; python_version >= "3.12" and python_version < "4.0"
 iniconfig==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 installer==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
+ipython==8.30.0 ; python_version >= "3.12" and python_version < "4.0"
 isort==5.13.2 ; python_version >= "3.12" and python_version < "4.0"
 jaraco-classes==3.4.0 ; python_version >= "3.12" and python_version < "4.0"
+jedi==0.19.2 ; python_version >= "3.12" and python_version < "4.0"
 jeepney==0.8.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 jinja2==3.1.4 ; python_version >= "3.12" and python_version < "4.0"
 jiter==0.8.0 ; python_version >= "3.12" and python_version < "4.0"
 keyring==24.3.1 ; python_version >= "3.12" and python_version < "4.0"
+kiwisolver==1.4.7 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
+matplotlib-inline==0.1.7 ; python_version >= "3.12" and python_version < "4.0"
+matplotlib==3.9.3 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 more-itertools==10.5.0 ; python_version >= "3.12" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -47,20 +58,26 @@ mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 numpy==2.1.3 ; python_version >= "3.12" and python_version < "4.0"
 openai==1.56.1 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
+pandas==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
+parso==0.8.4 ; python_version >= "3.12" and python_version < "4.0"
 pathspec==0.12.1 ; python_version >= "3.12" and python_version < "4.0"
 pexpect==4.9.0 ; python_version >= "3.12" and python_version < "4.0"
+pillow==11.0.0 ; python_version >= "3.12" and python_version < "4.0"
 pkginfo==1.12.0 ; python_version >= "3.12" and python_version < "4.0"
 platformdirs==4.3.6 ; python_version >= "3.12" and python_version < "4.0"
 pluggy==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 poetry-core==1.9.1 ; python_version >= "3.12" and python_version < "4.0"
 poetry-plugin-export==1.8.0 ; python_version >= "3.12" and python_version < "4.0"
 poetry==1.8.4 ; python_version >= "3.12" and python_version < "4.0"
+prompt-toolkit==3.0.48 ; python_version >= "3.12" and python_version < "4.0"
 ptyprocess==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
+pure-eval==0.2.3 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "darwin" or sys_platform == "linux") and (sys_platform == "darwin" or platform_python_implementation != "PyPy")
 pydantic-core==2.27.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-settings==2.6.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.10.3 ; python_version >= "3.12" and python_version < "4.0"
 pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
+pyparsing==3.2.0 ; python_version >= "3.12" and python_version < "4.0"
 pyproject-hooks==1.2.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-asyncio==0.24.0 ; python_version >= "3.12" and python_version < "4.0"
 pytest-cov==4.1.0 ; python_version >= "3.12" and python_version < "4.0"
@@ -69,6 +86,7 @@ pytest==8.3.4 ; python_version >= "3.12" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 python-multipart==0.0.19 ; python_version >= "3.12" and python_version < "4.0"
+pytz==2024.2 ; python_version >= "3.12" and python_version < "4.0"
 pywin32-ctypes==0.2.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
 rapidfuzz==3.10.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -80,17 +98,22 @@ setuptools==75.6.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
+stack-data==0.6.3 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
+tokenize-rt==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
 tomlkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.12" and python_version < "4.0"
+traitlets==5.14.3 ; python_version >= "3.12" and python_version < "4.0"
 trove-classifiers==2024.10.21.16 ; python_version >= "3.12" and python_version < "4.0"
 typer==0.15.0 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
+tzdata==2024.2 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
 uuid-utils==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn[standard]==0.32.1 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; (sys_platform != "win32" and sys_platform != "cygwin") and platform_python_implementation != "PyPy" and python_version >= "3.12" and python_version < "4.0"
 virtualenv==20.28.0 ; python_version >= "3.12" and python_version < "4.0"
 watchfiles==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
+wcwidth==0.2.13 ; python_version >= "3.12" and python_version < "4.0"
 websockets==14.1 ; python_version >= "3.12" and python_version < "4.0"
 xattr==1.1.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "darwin"
