Update dependencies and increment project version
- Upgrade several packages to their latest versions:
  - anyio to 4.7.0
  - fastapi-cli to 0.0.6
  - fonttools to 4.55.2
  - openai to 1.57.0
  - six to 1.17.0
  - typer to 0.15.1
- Add rich-toolkit as a new dependency.
- Update author information in pyproject.toml.
- Increment project version to 0.4.0 for release readiness.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-authors = ["Allen Chou <f1470891079@gmail.com>"]
-description = "Deploy simple vector similarity search service by duckdb."
+authors = ["allen2c <f1470891079@gmail.com>"]
+description = "Deploy simple vector similarity search service by DuckDB."
 license = "MIT"
 name = "dvs-py"
 packages = [{ include = "dvs" }]
 readme = "README.md"
-version = "0.3.0"
+version = "0.4.0"
 
 [tool.poetry.dependencies]
 diskcache = "*"
