--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -1,5 +1,5 @@
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
-anyio==4.6.2.post1 ; python_version >= "3.12" and python_version < "4.0"
+anyio==4.7.0 ; python_version >= "3.12" and python_version < "4.0"
 asttokens==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 black[jupyter]==24.10.0 ; python_version >= "3.12" and python_version < "4.0"
 build==1.2.2.post1 ; python_version >= "3.12" and python_version < "4.0"
@@ -26,11 +26,11 @@ email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 execnet==2.1.1 ; python_version >= "3.12" and python_version < "4.0"
 executing==2.1.0 ; python_version >= "3.12" and python_version < "4.0"
 faker==33.1.0 ; python_version >= "3.12" and python_version < "4.0"
-fastapi-cli[standard]==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
+fastapi-cli[standard]==0.0.6 ; python_version >= "3.12" and python_version < "4.0"
 fastapi[standard]==0.115.6 ; python_version >= "3.12" and python_version < "4.0"
 fastjsonschema==2.21.1 ; python_version >= "3.12" and python_version < "4.0"
 filelock==3.16.1 ; python_version >= "3.12" and python_version < "4.0"
-fonttools==4.55.1 ; python_version >= "3.12" and python_version < "4.0"
+fonttools==4.55.2 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
 httptools==0.6.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -56,7 +56,7 @@ more-itertools==10.5.0 ; python_version >= "3.12" and python_version < "4.0"
 msgpack==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 numpy==2.1.3 ; python_version >= "3.12" and python_version < "4.0"
-openai==1.56.1 ; python_version >= "3.12" and python_version < "4.0"
+openai==1.57.0 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
 pandas==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
 parso==0.8.4 ; python_version >= "3.12" and python_version < "4.0"
@@ -92,12 +92,13 @@ pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
 rapidfuzz==3.10.1 ; python_version >= "3.12" and python_version < "4.0"
 requests-toolbelt==1.0.0 ; python_version >= "3.12" and python_version < "4.0"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
+rich-toolkit==0.12.0 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
 scipy==1.14.1 ; python_version >= "3.12" and python_version < "4.0"
 secretstorage==3.3.3 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "linux"
 setuptools==75.6.0 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
-six==1.16.0 ; python_version >= "3.12" and python_version < "4.0"
+six==1.17.0 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 stack-data==0.6.3 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
@@ -106,7 +107,7 @@ tomlkit==0.13.2 ; python_version >= "3.12" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.12" and python_version < "4.0"
 traitlets==5.14.3 ; python_version >= "3.12" and python_version < "4.0"
 trove-classifiers==2024.10.21.16 ; python_version >= "3.12" and python_version < "4.0"
-typer==0.15.0 ; python_version >= "3.12" and python_version < "4.0"
+typer==0.15.1 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2024.2 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.2.3 ; python_version >= "3.12" and python_version < "4.0"
