--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0"
-anyio==4.6.2.post1 ; python_version >= "3.12" and python_version < "4.0"
+anyio==4.7.0 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2024.8.30 ; python_version >= "3.12" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.12" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
@@ -8,7 +8,7 @@ distro==1.9.0 ; python_version >= "3.12" and python_version < "4.0"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 duckdb==1.1.3 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
-fastapi-cli[standard]==0.0.5 ; python_version >= "3.12" and python_version < "4.0"
+fastapi-cli[standard]==0.0.6 ; python_version >= "3.12" and python_version < "4.0"
 fastapi[standard]==0.115.6 ; python_version >= "3.12" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.12" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.12" and python_version < "4.0"
@@ -21,7 +21,7 @@ markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==2.1.5 ; python_version >= "3.12" and python_version < "4.0"
 mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 numpy==2.1.3 ; python_version >= "3.12" and python_version < "4.0"
-openai==1.56.1 ; python_version >= "3.12" and python_version < "4.0"
+openai==1.57.0 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-core==2.27.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic-settings==2.6.1 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.10.3 ; python_version >= "3.12" and python_version < "4.0"
@@ -29,12 +29,13 @@ pygments==2.18.0 ; python_version >= "3.12" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.12" and python_version < "4.0"
 python-multipart==0.0.19 ; python_version >= "3.12" and python_version < "4.0"
 pyyaml==6.0.2 ; python_version >= "3.12" and python_version < "4.0"
+rich-toolkit==0.12.0 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
 shellingham==1.5.4 ; python_version >= "3.12" and python_version < "4.0"
 sniffio==1.3.1 ; python_version >= "3.12" and python_version < "4.0"
 starlette==0.41.3 ; python_version >= "3.12" and python_version < "4.0"
 tqdm==4.67.1 ; python_version >= "3.12" and python_version < "4.0"
-typer==0.15.0 ; python_version >= "3.12" and python_version < "4.0"
+typer==0.15.1 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 uuid-utils==0.10.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn[standard]==0.32.1 ; python_version >= "3.12" and python_version < "4.0"
