<analysis> 1. **Plan**: The provided git diff shows changes made to the `mkdocs.yml` file, specifically updating the repository name and adding a color palette to the theme configuration.
2. **Describe**:
   - The repository name was changed from `dvs` to `allen2c/dvs`.
   - A color palette was added to the theme configuration, specifying both primary and accent colors as amber.

3. **Reconstruct**: The changes indicate a shift in branding or ownership of the project, as reflected in the repository name. The addition of the color palette enhances the visual aspect of the documentation site, likely aiming for a more cohesive and appealing design.

4. **Analyze**: The overall impact of these changes is twofold:
   - **Feature Addition**: The introduction of a color palette improves the aesthetics of the documentation.
   - **Documentation Update**: Changing the repository name reflects a potential rebranding or organizational change.

5. **Categorize and Summarize**:
   - **Feature Additions**: Added color palette to the theme.
   - **Documentation Updates**: Updated repository name.

6. **Create a git commit message**: The message will summarize the changes clearly and concisely, focusing on the impact of the modifications.

</analysis>

<commit_message>
Update repository name and enhance documentation theme

- Change repository name from `dvs` to `allen2c/dvs`
- Add color palette to the theme configuration with amber colors

These changes reflect a rebranding effort and improve the visual appeal of the documentation site.
</commit_message>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: DVS
 
-repo_name: dvs
+repo_name: allen2c/dvs
 repo_url: https://github.com/allen2c/dvs
 site_author: allen2c
 site_description: A high-performance vector similarity search API powered by DuckDB and OpenAI embeddings.
@@ -8,6 +8,9 @@ site_url: https://allen2c.github.io/dvs/
 
 theme:
   name: material
+  palette:
+    primary: amber
+    accent: amber
 
 markdown_extensions:
   - pymdownx.superfences:
