🛠️ refactor(document): Improve Document model validation and embedding generation
Leverage Pydantic's model validator for robust content and name
sanitization, eliminating the need for a separate `strip` method.
Integrate `openai-embeddings-model` for embedding generation, improving
modularity, and introduce `str-or-none` for enhanced type safety.

This commit improves the internal consistency and maintainability of the
`Document` class.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ openai-embeddings-model = "*"
 pydantic = "^2"
 pydantic-settings = "*"
 python = ">=3.11,<4"
+str-or-none = "*"
 uuid-utils = "*"
 
 [tool.poetry.extras]
