--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -131,6 +131,7 @@ six==1.17.0 ; python_version >= "3.11" and python_version < "4"
 smmap==5.0.2 ; python_version >= "3.11" and python_version < "4"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4"
 stack-data==0.6.3 ; python_version >= "3.11" and python_version < "4"
+str-or-none==0.1.0 ; python_version >= "3.11" and python_version < "4"
 tokenize-rt==6.2.0 ; python_version >= "3.11" and python_version < "4"
 tomlkit==0.13.3 ; python_version >= "3.11" and python_version < "4"
 tqdm==4.67.1 ; python_version >= "3.11" and python_version < "4"
