--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pydantic-settings==2.10.1 ; python_version >= "3.11" and python_version < "4"
 pydantic==2.11.7 ; python_version >= "3.11" and python_version < "4"
 python-dotenv==1.1.1 ; python_version >= "3.11" and python_version < "4"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4"
+str-or-none==0.1.0 ; python_version >= "3.11" and python_version < "4"
 tqdm==4.67.1 ; python_version >= "3.11" and python_version < "4"
 typing-extensions==4.14.0 ; python_version >= "3.11" and python_version < "4"
 typing-inspection==0.4.1 ; python_version >= "3.11" and python_version < "4"
