--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -58,6 +58,7 @@ jiter==0.10.0 ; python_version >= "3.11" and python_version < "4"
 jsmin==3.0.1 ; python_version >= "3.11" and python_version < "4"
 keyring==25.6.0 ; python_version >= "3.11" and python_version < "4"
 kiwisolver==1.4.8 ; python_version >= "3.11" and python_version < "4"
+logging-bullet-train==0.3.0 ; python_version >= "3.11" and python_version < "4"
 markdown-it-py==3.0.0 ; python_version >= "3.11" and python_version < "4"
 markdown==3.8.2 ; python_version >= "3.11" and python_version < "4"
 markupsafe==3.0.2 ; python_version >= "3.11" and python_version < "4"
@@ -137,9 +138,10 @@ tomlkit==0.13.3 ; python_version >= "3.11" and python_version < "4"
 tqdm==4.67.1 ; python_version >= "3.11" and python_version < "4"
 traitlets==5.14.3 ; python_version >= "3.11" and python_version < "4"
 trove-classifiers==2025.5.9.12 ; python_version >= "3.11" and python_version < "4"
-typing-extensions==4.14.0 ; python_version >= "3.11" and python_version < "4"
+typing-extensions==4.14.1 ; python_version >= "3.11" and python_version < "4"
 typing-inspection==0.4.1 ; python_version >= "3.11" and python_version < "4"
 tzdata==2025.2 ; python_version >= "3.11" and python_version < "4"
+tzlocal==5.3.1 ; python_version >= "3.11" and python_version < "4"
 urllib3==2.5.0 ; python_version >= "3.11" and python_version < "4"
 uuid-utils==0.11.0 ; python_version >= "3.11" and python_version < "4"
 virtualenv==20.31.2 ; python_version >= "3.11" and python_version < "4"
