--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 annotated-types==0.7.0 ; python_version >= "3.11" and python_version < "4"
 anyio==4.9.0 ; python_version >= "3.11" and python_version < "4"
 certifi==2025.6.15 ; python_version >= "3.11" and python_version < "4"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "4" and platform_system == "Windows"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "4"
 diskcache==5.6.3 ; python_version >= "3.11" and python_version < "4"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "4"
 duckdb==1.3.1 ; python_version >= "3.11" and python_version < "4"
@@ -10,6 +10,7 @@ httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4"
 idna==3.10 ; python_version >= "3.11" and python_version < "4"
 jiter==0.10.0 ; python_version >= "3.11" and python_version < "4"
+logging-bullet-train==0.3.0 ; python_version >= "3.11" and python_version < "4"
 numpy==2.3.1 ; python_version >= "3.11" and python_version < "4"
 openai-embeddings-model==0.2.0 ; python_version >= "3.11" and python_version < "4"
 openai==1.93.0 ; python_version >= "3.11" and python_version < "4"
@@ -20,6 +21,8 @@ python-dotenv==1.1.1 ; python_version >= "3.11" and python_version < "4"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4"
 str-or-none==0.1.0 ; python_version >= "3.11" and python_version < "4"
 tqdm==4.67.1 ; python_version >= "3.11" and python_version < "4"
-typing-extensions==4.14.0 ; python_version >= "3.11" and python_version < "4"
+typing-extensions==4.14.1 ; python_version >= "3.11" and python_version < "4"
 typing-inspection==0.4.1 ; python_version >= "3.11" and python_version < "4"
+tzdata==2025.2 ; python_version >= "3.11" and python_version < "4" and platform_system == "Windows"
+tzlocal==5.3.1 ; python_version >= "3.11" and python_version < "4"
 uuid-utils==0.11.0 ; python_version >= "3.11" and python_version < "4"
