♻️ refactor(test-suite): Reorganize tests and remove custom logger
Moved core, API, and QuerySet tests into `tests/dvs/` to better reflect the package structure. Removed the custom `dvs/utils/logger.py` for streamlined logging practices. Also updated development dependencies to include `codepress` and `puremagic`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ neoteroi-mkdocs = "*"
 
 [tool.poetry.group.dev.dependencies]
 black = { extras = ["jupyter"], version = "*" }
+codepress = "*"
 faker = "*"
 isort = "*"
 matplotlib = "*"
