--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -12,6 +12,7 @@ cffi==1.17.1 ; python_version >= "3.11" and python_version < "4" and (sys_platfo
 charset-normalizer==3.4.2 ; python_version >= "3.11" and python_version < "4"
 cleo==2.1.0 ; python_version >= "3.11" and python_version < "4"
 click==8.2.1 ; python_version >= "3.11" and python_version < "4"
+codepress==0.2.2 ; python_version >= "3.11" and python_version < "4"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4"
 contourpy==1.3.2 ; python_version >= "3.11" and python_version < "4"
 coverage==7.9.2 ; python_version >= "3.11" and python_version < "4"
@@ -101,6 +102,7 @@ poetry==2.1.3 ; python_version >= "3.11" and python_version < "4"
 prompt-toolkit==3.0.51 ; python_version >= "3.11" and python_version < "4"
 ptyprocess==0.7.0 ; python_version >= "3.11" and python_version < "4" and sys_platform != "win32" and sys_platform != "emscripten"
 pure-eval==0.2.3 ; python_version >= "3.11" and python_version < "4"
+puremagic==1.30 ; python_version >= "3.11" and python_version < "4"
 pycparser==2.22 ; python_version >= "3.11" and python_version < "4" and (sys_platform == "linux" or sys_platform == "darwin" or platform_python_implementation == "PyPy")
 pydantic-core==2.33.2 ; python_version >= "3.11" and python_version < "4"
 pydantic-settings==2.10.1 ; python_version >= "3.11" and python_version < "4"
