--- a/requirements-all.txt
+++ b/requirements-all.txt
@@ -10,6 +10,7 @@ cachecontrol==0.14.3 ; python_version >= "3.11" and python_version < "4"
 certifi==2025.6.15 ; python_version >= "3.11" and python_version < "4"
 cffi==1.17.1 ; python_version >= "3.11" and python_version < "4" and (sys_platform == "linux" or sys_platform == "darwin" or platform_python_implementation == "PyPy")
 charset-normalizer==3.4.2 ; python_version >= "3.11" and python_version < "4"
+chunkle==0.2.0 ; python_version >= "3.11" and python_version < "4"
 cleo==2.1.0 ; python_version >= "3.11" and python_version < "4"
 click==8.2.1 ; python_version >= "3.11" and python_version < "4"
 codepress==0.2.2 ; python_version >= "3.11" and python_version < "4"
@@ -83,7 +84,7 @@ msgpack==1.1.1 ; python_version >= "3.11" and python_version < "4"
 mypy-extensions==1.1.0 ; python_version >= "3.11" and python_version < "4"
 neoteroi-mkdocs==1.1.2 ; python_version >= "3.11" and python_version < "4"
 numpy==2.3.1 ; python_version >= "3.11" and python_version < "4"
-openai-embeddings-model==0.2.0 ; python_version >= "3.11" and python_version < "4"
+openai-embeddings-model==0.3.0 ; python_version >= "3.11" and python_version < "4"
 openai==1.93.0 ; python_version >= "3.11" and python_version < "4"
 packaging==25.0 ; python_version >= "3.11" and python_version < "4"
 paginate==0.5.7 ; python_version >= "3.11" and python_version < "4"
@@ -123,6 +124,7 @@ pywin32-ctypes==0.2.3 ; python_version >= "3.11" and python_version < "4" and sy
 pyyaml-env-tag==1.1 ; python_version >= "3.11" and python_version < "4"
 pyyaml==6.0.2 ; python_version >= "3.11" and python_version < "4"
 rapidfuzz==3.13.0 ; python_version >= "3.11" and python_version < "4"
+regex==2024.11.6 ; python_version >= "3.11" and python_version < "4"
 requests-toolbelt==1.0.0 ; python_version >= "3.11" and python_version < "4"
 requests==2.32.4 ; python_version >= "3.11" and python_version < "4"
 rich==14.0.0 ; python_version >= "3.11" and python_version < "4"
@@ -135,6 +137,7 @@ smmap==5.0.2 ; python_version >= "3.11" and python_version < "4"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4"
 stack-data==0.6.3 ; python_version >= "3.11" and python_version < "4"
 str-or-none==0.1.0 ; python_version >= "3.11" and python_version < "4"
+tiktoken==0.9.0 ; python_version >= "3.11" and python_version < "4"
 tokenize-rt==6.2.0 ; python_version >= "3.11" and python_version < "4"
 tomlkit==0.13.3 ; python_version >= "3.11" and python_version < "4"
 tqdm==4.67.1 ; python_version >= "3.11" and python_version < "4"
