--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 annotated-types==0.7.0 ; python_version >= "3.11" and python_version < "4"
 anyio==4.9.0 ; python_version >= "3.11" and python_version < "4"
 certifi==2025.6.15 ; python_version >= "3.11" and python_version < "4"
+charset-normalizer==3.4.2 ; python_version >= "3.11" and python_version < "4"
+chunkle==0.2.0 ; python_version >= "3.11" and python_version < "4"
+click==8.2.1 ; python_version >= "3.11" and python_version < "4"
+codepress==0.2.2 ; python_version >= "3.11" and python_version < "4"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4"
 diskcache==5.6.3 ; python_version >= "3.11" and python_version < "4"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "4"
@@ -9,20 +13,28 @@ h11==0.16.0 ; python_version >= "3.11" and python_version < "4"
 httpcore==1.0.9 ; python_version >= "3.11" and python_version < "4"
 httpx==0.28.1 ; python_version >= "3.11" and python_version < "4"
 idna==3.10 ; python_version >= "3.11" and python_version < "4"
+jinja2==3.1.6 ; python_version >= "3.11" and python_version < "4"
 jiter==0.10.0 ; python_version >= "3.11" and python_version < "4"
 logging-bullet-train==0.3.0 ; python_version >= "3.11" and python_version < "4"
+markupsafe==3.0.2 ; python_version >= "3.11" and python_version < "4"
 numpy==2.3.1 ; python_version >= "3.11" and python_version < "4"
-openai-embeddings-model==0.2.0 ; python_version >= "3.11" and python_version < "4"
+openai-embeddings-model==0.3.0 ; python_version >= "3.11" and python_version < "4"
 openai==1.93.0 ; python_version >= "3.11" and python_version < "4"
+pathspec==0.12.1 ; python_version >= "3.11" and python_version < "4"
+puremagic==1.30 ; python_version >= "3.11" and python_version < "4"
 pydantic-core==2.33.2 ; python_version >= "3.11" and python_version < "4"
 pydantic-settings==2.10.1 ; python_version >= "3.11" and python_version < "4"
 pydantic==2.11.7 ; python_version >= "3.11" and python_version < "4"
 python-dotenv==1.1.1 ; python_version >= "3.11" and python_version < "4"
+regex==2024.11.6 ; python_version >= "3.11" and python_version < "4"
+requests==2.32.4 ; python_version >= "3.11" and python_version < "4"
 sniffio==1.3.1 ; python_version >= "3.11" and python_version < "4"
 str-or-none==0.1.0 ; python_version >= "3.11" and python_version < "4"
+tiktoken==0.9.0 ; python_version >= "3.11" and python_version < "4"
 tqdm==4.67.1 ; python_version >= "3.11" and python_version < "4"
 typing-extensions==4.14.1 ; python_version >= "3.11" and python_version < "4"
 typing-inspection==0.4.1 ; python_version >= "3.11" and python_version < "4"
 tzdata==2025.2 ; python_version >= "3.11" and python_version < "4" and platform_system == "Windows"
 tzlocal==5.3.1 ; python_version >= "3.11" and python_version < "4"
+urllib3==2.5.0 ; python_version >= "3.11" and python_version < "4"
 uuid-utils==0.11.0 ; python_version >= "3.11" and python_version < "4"
